# IA_create_IA_cate

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  Source.ipynb  environment.yml  environment_mac.yml  pyproject.toml
Data/Verbatims/: base_verbatims.csv
Data/avis_client/: Aper_u_-_Sentiments_FR__unlabeled_.csv
Data/cate_metier/: Aper_u_-_M_tiers__labeled_.csv  Aper_u_-_M_tiers__unlabeled_.csv  test.csv  train.csv
Learning/: Few_shot_LLM.md  autoML.md  features_engineering.md  metrique_evaluation.md
Modeles/Titanic_Kaggle/: flaml_model.joblib
Modeles/Titanic_Kaggle/h2o/: DeepLearning_grid_1_AutoML_1_20251120_135419  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11_cv_1  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11_cv_2  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11_cv_3  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11_cv_4  DeepLearning_grid_1_AutoML_1_20251120_135419_model_11_cv_5  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12_cv_1  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12_cv_2  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12_cv_3  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12_cv_4  DeepLearning_grid_1_AutoML_1_20251120_135419_model_12_cv_5  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13_cv_1  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13_cv_2  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13_cv_3  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13_cv_4  DeepLearning_grid_1_AutoML_1_20251120_135419_model_13_cv_5  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14_cv_1  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14_cv_2  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14_cv_3  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14_cv_4  DeepLearning_grid_1_AutoML_1_20251120_135419_model_14_cv_5  DeepLearning_grid_1_AutoML_1_20251120_135419_model_15  DeepLearning_grid_1_AutoML_1_20251120_135419_model_15_cv_1  DeepLearning_grid_1_AutoML_1_20251120_135419_model_15_cv_2  DeepLearning_grid_1_AutoML_1_20251120_135419_model_15_cv_3  (+999 more)
Notebook/: test_analyse_donne.ipynb  test_automodel.ipynb  test_get_data.ipynb  test_llm.ipynb
Test/: test_analyse_format.py  test_embedding.py  test_import.py
Test/AutoML/: test_all.py  test_autogluon.py  test_flaml.py  test_h2o.py  test_tpot.py
Test/analyse/: test_analyse.py  test_analyse_fe_llm.py  test_analyse_format.py
Test/feature_engineering/: test_analyse_fe_llm.py  test_features_engineering.py  write_json_llm.py
Test/few_shot/: test_few.py  test_few_finetune.py  test_finetune.py
Test/main/: test_pipeline.py
Test/pipeline/: test_pipeline.py
data/raw/avis_client/: train.csv
docs/: business_agent.md  cli_reference.md  import_migration.md  testing.md
docs/architecture/: MODULE_DEPENDENCIES.md  OVERVIEW.md
docs/modules/: analyse.md  automl.md  core.md  feature_engineering.md  front.md  models.md  pipeline.md
notebooks/: test_analyse_donne.ipynb  test_automodel.ipynb  test_get_data.ipynb  test_llm.ipynb
plan/: TODO_implementation.md  architecture_automl_meta_learning.md
portfolio/: README.md
scripts/: migrate_architecture.py
src/: __init__.py  myautoML.py
src/Data/: load_datasets.py
src/analyse/: README.md  __init__.py  analyse.py  path_config.py
src/analyse_donne/: analyse_categorisation.py  format_entrainement.py  load_datasets.py
src/autoML/: all_autoML.py  autogluon.py  flaml.py  h2o.py  tpot1.py
src/autoML_nonsupervise/: my_autoML.py
src/autoML_supervise/: all_autoML.py  h2o.py
src/automl/: README.md  __init__.py  path_config.py  runner.py
src/categorisation_echantillion/: calibrate_embedding.py  f_embedding.py  fews_shot_embedding.py
src/core/: README.md  __init__.py  base_path_config.py  config.py  dataframe_utils.py  io_utils.py  llm_client.py  preprocessing.py  text_cleaning.py
src/feature_engineering/: README.md  __init__.py  path_config.py
src/features_engineering/: pipeline.py  test_FE.py
src/few_shot/: comparaison_fews_shots.py  few_shot_all.py  few_shot_finetune.py  fews_shot_llm.py  zero_shot.py
src/fonctions/: affichage_console.py  clean_label.py  clean_tokeniser.py  csv.py  format_entrainement.py
src/front/: README.md  css.py  fe_progress_monitor.py  fe_runner_async.py  interface_streamlit.py  pipeline_streamlit.py  section_embedding.py  ui_helper.py  upload_fichier.py
src/helper/: client_llm.py  ollama_llm.py
src/main/: pipeline_model.py
src/models/: README.md  __init__.py  base.py  config.py  registry.py
src/pipeline/: README.md  pipeline_all.py  pipeline_autoMl.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_analyse.py  test_automl.py  test_dfs.py  test_hybrid.py  test_llmfe.py  test_llmfe_metric_integration.py  test_pipeline.py  test_pipeline_all.py
tests/unit/: __init__.py  test_analyse.py  test_autogluon.py  test_eval_metric_config.py  test_feature_engineering.py  test_flaml.py  test_h2o.py  test_models_module.py  test_tpot.py
(+248 files in other folders)
