# =============================================================================
# CONFIGURATION DU PROJET - IA_create_IA_cate
# =============================================================================
# Note: Les dépendances sont gérées par conda (environment.yml)
# Ce fichier configure uniquement les outils de développement (ruff, pytest, mypy)

[project]
name = "ia-create-ia-cate"
version = "0.1.0"
description = "Pipeline ML automatisé : Analyse → Feature Engineering (LLMFE) → AutoML"
authors = [
    {name = "Tunderalpha", email = "131662618+AlexisGauthron@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

# =============================================================================
# RUFF - Linter & Formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "outputs",
    "data",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "N",      # pep8-naming (conventions de nommage)
    "I",      # isort (tri des imports)
    "UP",     # pyupgrade (syntaxe moderne)
    "B",      # flake8-bugbear (bugs courants)
]

ignore = [
    "E501",   # Ligne trop longue (géré par formatter)
    "E402",   # Import pas en haut du fichier (nécessaire pour config sys.path)
    "E701",   # Multiple statements on one line (colon)
    "E702",   # Multiple statements on one line (semicolon)
    "E712",   # Comparison to True/False (parfois voulu pour pandas)
    "E721",   # Type comparison (isinstance préféré mais pas toujours)
    "E722",   # Bare except (parfois nécessaire pour catch-all)
    "E741",   # Ambiguous variable name (l, O, I)
    "W291",   # Trailing whitespace (géré par formatter)
    "W293",   # Blank line contains whitespace (géré par formatter)
    "N802",   # Function name should be lowercase (pour visit_FunctionDef, etc. - API ast)
    "N806",   # Variable in function should be lowercase (pour X_train_df, X_test_df, etc.)
    "N803",   # Argument name should be lowercase (pour X, y en ML)
    "N816",   # Variable in global scope should not be mixedCase
    "N999",   # Invalid module name
    # Règles UP désactivées pour compatibilité Python 3.9 (Streamlit utilise Python système)
    "UP006",  # list[X] au lieu de List[X] - incompatible Python < 3.9
    "UP007",  # X | Y au lieu de Union[X, Y] - incompatible Python < 3.10
    "UP035",  # Imports dépréciés (typing.List -> list) - incompatible Python < 3.9
    "UP038",  # isinstance avec tuple (plus lisible que X | Y)
    "B006",   # Mutable default argument (parfois voulu)
    "B007",   # Unused loop control variable
    "B018",   # Useless expression (df dans notebooks)
    "B019",   # lru_cache on methods (acceptable ici)
    "B904",   # Raise without from inside except
    "F401",   # Import unused (nécessaire pour try/except disponibilité)
    "F821",   # Undefined name (faux positifs dans notebooks)
    "F841",   # Local variable assigned but never used
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pep8-naming]
# Exceptions pour les conventions ML
ignore-names = ["X", "X_train", "X_test", "X_val", "y", "y_train", "y_test", "y_val"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MYPY - Type Checking (optionnel)
# =============================================================================
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["outputs/", "data/"]

# =============================================================================
# PYTEST - Tests
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
